@@ -7,7 +7,6 @@
  - Implement tree cascading
  - Fix gnome_url_show
  - Don't have a separate add extension dialog, just put it in the same dialog as everything else
- - Save Internet service info
  - Fill in list for Internet service apps
  - Make add work
 
