@@ -1,5 +1,8 @@
 2002-01-11  Bradford Hovinen  <hovinen@ximian.com>
 
+	* service-edit-dialog.c (store_data): Retrieve app info from
+	option menu
+
 	* file-types-capplet.c (apply_cb): Commit the changeset
 	(main): Construct a changeset
 	(edit_cb): Pass the changeset to service_info_new
